Correcciones en obtención de informacion para contexto

--- a/Drogueria.Core.App/Drogueria.Core.App.csproj
+++ b/Drogueria.Core.App/Drogueria.Core.App.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\Drogueria.Core.Servicio\Drogueria.Core.Servicio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
