--- a/Drogueria.Api/appsettings.json
+++ b/Drogueria.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Desarrollo": "Server=.\\SQLEXPRESS;Database=Drogueria;Trusted_Connection=True;",
+    "Desarrollo": "Server=.\\SQLEXPRESS;Database=Drogueria;Trusted_Connection=True;"
   },
   "JsonDataInicial": {
     "Proveedores": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\proveedores.json",
