--- a/Drogueria.Api/appsettings.json
+++ b/Drogueria.Api/appsettings.json
@@ -13,5 +13,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Secret": "$%&/()=526353nhs"
+  }
 }
