--- a/Drogueria.Core.Infraestructura/Drogueria.Core.Infraestructura.csproj
+++ b/Drogueria.Core.Infraestructura/Drogueria.Core.Infraestructura.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AuthenticatedEncryption" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Drogueria.Core.Dominio\Drogueria.Core.Dominio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
