Modificaciones para publicacion de api

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /Drogueria.Api/obj
 /Drogueria.Api/bin
 /Drogueria.Api/bin/Debug/netcoreapp3.1
+/Drogueria.Api/.config/
+/Drogueria.Api/Properties/PublishProfiles/
 /Drogueria.Core.App/obj
 /Drogueria.Core.App/bin
 /Drogueria.Core.Dominio/obj
