--- a/Drogueria.Api/appsettings.Development.json
+++ b/Drogueria.Api/appsettings.Development.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionString": "Server=.\\SQLEXPRESS;Database=Drogueria;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "Desarrollo": "Initial Catalog=Drogueria;Data Source=DESKTOP-0PHBBUU\\SQLEXPRESS;User ID=usrDrogueria;Password=v$|st0;Connection Timeout=180;"
+  },
   "JsonDataInicial": {
     "Proveedores": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\proveedores.json",
     "Arsenales": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\arsenales.json"
@@ -11,5 +13,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Secret": "$%&/()=526353nhs"
+  }
 }
