--- a/Drogueria.Api/appsettings.json
+++ b/Drogueria.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Desarrollo": "Server=.\\SQLEXPRESS;Database=Drogueria;Trusted_Connection=True;"
+    "Desarrollo": "Initial Catalog=Drogueria;Data Source=DESKTOP-0PHBBUU\\SQLEXPRESS;User ID=usrDrogueria;Password=v$|st0;Connection Timeout=180;"
   },
   "JsonDataInicial": {
     "Proveedores": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\proveedores.json",
