--- a/Drogueria.Core.App/appsettings.json
+++ b/Drogueria.Core.App/appsettings.json
@@ -1,9 +1,20 @@
 {
   "ConnectionStrings": {
-    "Desarrollo": "Server=.\\SQLEXPRESS;Database=Drogueria;Trusted_Connection=True;"
+    "Desarrollo": "Initial Catalog=Drogueria;Data Source=DESKTOP-0PHBBUU\\SQLEXPRESS;User ID=usrDrogueria;Password=v$|st0;Connection Timeout=180;"
   },
   "JsonDataInicial": {
     "Proveedores": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\proveedores.json",
     "Arsenales": "E:\\personal\\.net\\drogueria\\Drogueria\\Drogueria.Core.Infraestructura\\json\\arsenales.json"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "Secret": "$%&/()=526353nhs"
   }
 }
